--- a/server/adminapi/conf/db_test.conf
+++ b/server/adminapi/conf/db_test.conf
@@ -1,8 +1,8 @@
 # 数据库配置
 mysqluser = "root"
-mysqlpass = "rootroot"
-mysqlurls = "127.0.0.1"
-mysqldb = "medical_equipment_managementv2.5"
+mysqlpass = "root"
+mysqlurls = "192.168.204.1"
+mysqldb = "admin"
 mysqlport = "3306"
-mysqlpre = "reps_"
+mysqlpre = ""
 dbdrivername = "mysql"
